# ffmpeg

./: .clang-format  .eslintrc.json  .gitignore  .gitmodules  .mocharc.js  .mocharc.json  .npmignore  CHANGELOG.md  README.md  audio-layout-syntax-error.patch  binding.gyp  conan.profile  conanfile.py  conanfile.txt  defaults.gypi  eslint.config.mjs  except.gypi  meson.build  mmomtchev-ffmpeg-1.0.0.tgz  package-lock.json  package.json  rollup.cmd  rollup.config.js  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yml  node.js.yml  publish.yml  test-dev.yml  test-npm.yml
example/: transcodeAudio.js  transcodeVideo.js
hadron/: system-linux.ini
lib/: AudioDecoder.ts  AudioEncoder.ts  AudioTransform.ts  Demuxer.ts  Discarder.ts  MediaStream.ts  Muxer.ts  Stream.ts  VideoDecoder.ts  VideoEncoder.ts  VideoTransform.ts  index.d.ts  index.js
scripts/: conaninfo.js  motd.js  publish-packages.js
src/: avcpp-frame.cc  avcpp-frame.h  avcpp-nobind.cc  avcpp-types.h  constants  gen_constants.sh  undebug.js  undebug.ts
src/binding/: avcpp-customio.cc  avcpp-customio.h  avcpp-dictionary.h  avcpp-frame.cc  avcpp-frame.h  avcpp-nobind.cc  avcpp-readable.cc  avcpp-types.h  avcpp-writable.cc  constants  debug.h  gen_constants.sh  instance-data.h
src/lib/: AudioDecoder.ts  AudioEncoder.ts  AudioTransform.ts  Demuxer.ts  Discarder.ts  Filter.ts  MediaStream.ts  Muxer.ts  Stream.ts  VideoDecoder.ts  VideoEncoder.ts  VideoTransform.ts  index.ts  node-pre-gyp.d.ts
test/: audio-Samples.test.js  cjs.test.cjs  demuxer.test.ts  encode.test.ts  es6.test.mjs  extract.test.ts  filtering.test.ts  force-gc.js  inheritance.test.ts  napi-leaks-suppression.txt  overlay.test.ts  resample.test.ts  rescale.test.ts  rtmp.test.ts  setup.js  setup.ts  streaming.test.ts  transcode-video.test.ts  transcode.js  transcode.test.ts  transcodeAudio.js  tsconfig.json  tsconfig.test.json  video-Frame.test.js
xpacks/.bin/: ccmake  cmake  conan  cpack  ctest  meson  ninja  python3
xpacks/@mmomtchev/: conan-xpack  meson-xpack  python-xpack
xpacks/@xpack-dev-tools/: cmake  ninja-build
